grammar.js
    source_file: $ => repeat($._root),
    _root: $ => choice(
      $.extern_import,
      $.import,
      $.external_function,
      alias($.module_method, $.method),
      $.class,
      $.trait,
      $.implement_trait,
      $.reopen_class,
      $._expression,
      $.define_constant,
    ),

    // Imports
    type_parameters: $ => seq('[', comma_list($.type_parameter), ']'),
    type_parameter: $ => seq(
      field('name', $.constant),
      field(
        'requirements',
        optional(alias($.type_parameter_requirements, $.requirements))
      ),
    ),
    class: $ => seq(
      'type',
      field('visibility', optional($.visibility)),
      field('modifier', optional(alias($._class_modifier, $.modifier))),
      field('name', $.constant),
      field('type_parameters', optional($.type_parameters)),
      field('body', $.class_body),
    ),
    _class_modifier: $ => choice(
      'async',
      'builtin',
      'copy',
      'extern',
      'inline',
      'ref',
      seq(optional(choice('inline', 'copy', 'ref')), 'enum'),
    ),
    class_body: $ => seq('{', repeat($._class_expression) , '}'),
    _class_expression: $ => choice(
      $.define_field,
      $.define_case,
      alias($.class_method, $.method),
    ),
    define_field: $ => seq(
      'let',
      field('visibility', optional($.visibility)),
      field('modifier', optional(alias($.mutable, $.modifier))),
      field('name', $.field),
      ':',
      field('type', $._type),
    ),
    define_case: $ => seq(
      'case',
      field('name', $.constant),
      field('arguments', optional(alias($.case_arguments, $.arguments))),
    ),
    _type: $ => choice(
      prec.left($.generic_type),
      prec.right(alias($.constant, $.type)),
      $.ref_type,
      $.mut_type,
      $.uni_type,
      $.fn_type,
      $.tuple_type,
      $.move_type,
    ),
    generic_type: $ => seq(
      field('name', $.constant),
      field('arguments', $.type_arguments),
    ),
    type_arguments: $ => seq('[', comma_list($._type), ']'),
    block: $ => seq('{', repeat($._expression), '}'),
    _expression: $ => choice(
      $.not,
      $.binary,
      $.define_variable,
      $.float,
      $.integer,
      $.self,
      $.nil,
      $.true,
      $.false,
      $.block,
      $.string,
      alias($.and_or, $.binary),
      $.cast,
      $.grouped_expression,
      $.tuple,
      $.array,
      $.break,
      $.return,
      $.next,
      $.try,
      $.async,
      $.await,
      $.throw,
      $.closure,
      $.field,
      $.if,
      $.while,
      $.loop,
      $.for,
      $.match,
      $.ref,
      $.mut,
      $.recover,
      prec.right($.identifier),
      $.call,
      $.constant,
      alias($.call_with_receiver, $.call),
      $.assign_receiver_field,
      $.assign_local,
      $.assign_field,
      $.replace_receiver_field,
      $.replace_local,
      $.replace_field,
      $.compound_assign_local,
      $.compound_assign_field,
      $.compound_assign_receiver_field,
    ),
    mutable: _ => 'mut',
    copy: _ => 'copy',
    visibility: _ => 'pub',
    line_comment: _ => token(prec(-1, seq('#', /.*/))),
    identifier: _ => /([a-z]|_)[a-zA-Z\d_]*/,
    field: _ => /@[a-zA-Z\d_]+/,
    constant: _ => /[A-Z][a-zA-Z\d_]*/
  }
});
